--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mysql2": "^3.14.0",
+    "pm2": "^6.0.5",
     "prisma": "^6.5.0"
   },
   "devDependencies": {
